--- a/templates/basefile.html
+++ b/templates/basefile.html
@@ -15,6 +15,7 @@
        <link rel="stylesheet" type="text/css" href="{% static 'stylesheet/color.css' %}" />
        <!-- Animation -->
        <link rel="stylesheet" type="text/css" href="{% static 'stylesheet/animate.css' %}" />
+       <link rel="stylesheet" type="text/css" href="{% static 'stylesheet/myStyleSheet.css' %}" />
 
        <!-- Reponsive -->
        <link rel="stylesheet" type="text/css" href="{% static 'stylesheet/responsive.css' %}" />
@@ -75,24 +76,28 @@
                         </li>
                         <li><a href="/page_door">Doors</a>
                         </li>
-                        <li class="menu-item-has-children"><a href="#">Pages</a>
-                            <ul class="sub-menu">
-                                <li><a href="page-about.html">About Us</a></li>
-                                <li><a href="/company_info">Company Infomation</a></li>
-                                <li><a href="service.html">Services</a></li>
-                                <li><a href="service-details.html">Service Details</a></li>
-                                <li><a href="page-case-study.html">Case Study</a></li>
-                                <li><a href="study-details.html">Case Study Details</a></li>
-                                <li><a href="page-gallery.html">Gallery</a></li>
-                                <li><a href="page-Request-caculator.html">Cost Caculator</a></li>
-                                <li class="menu-item-has-children"><a href="blog-standard.html">Blog</a>
-                                    <ul class="sub-menu">
-                                        <li><a href="blog-standard.html">Blog Standard</a></li>
-                                        <li><a href="blog-details.html">Blog Details</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </li>
+{#                          <li> <a href="#">About Us</a>#}
+{#                          </li>#}
+                          <li><a href="/company_info">Company Infomation</a>
+                          </li>
+{#                        <li class="menu-item-has-children"><a href="#">Pages</a>#}
+{#                            <ul class="sub-menu">#}
+{#                                <li><a href="page-about.html">About Us</a></li>#}
+{#                                <li><a href="/company_info">Company Infomation</a></li>#}
+{#                                <li><a href="service.html">Services</a></li>#}
+{#                                <li><a href="service-details.html">Service Details</a></li>#}
+{#                                <li><a href="page-case-study.html">Case Study</a></li>#}
+{#                                <li><a href="study-details.html">Case Study Details</a></li>#}
+{#                                <li><a href="page-gallery.html">Gallery</a></li>#}
+{#                                <li><a href="page-Request-caculator.html">Cost Caculator</a></li>#}
+{#                                <li class="menu-item-has-children"><a href="blog-standard.html">Blog</a>#}
+{#                                    <ul class="sub-menu">#}
+{#                                        <li><a href="blog-standard.html">Blog Standard</a></li>#}
+{#                                        <li><a href="blog-details.html">Blog Details</a></li>#}
+{#                                    </ul>#}
+{#                                </li>#}
+{#                            </ul>#}
+{#                        </li>#}
                         <li><a href="/page_contact">Contact</a></li>
                     </ul>
                       <!-- /.menu -->
