--- a/templates/basefile.html
+++ b/templates/basefile.html
@@ -114,19 +114,19 @@
                           <span class="btn-title">Get A Quote</span>
                       </a>
                       </div>
-                      <div class="flat-show-search">
-                        <div class="show-search">
-                            <a href="#"><i class="fa fa-search"></i></a>
-                        </div>
-                        <div class="top-search">
-                            <form action="#" id="searchform-all" method="get">
-                                <div>
-                                    <input type="text" id="s" class="sss" placeholder="Search...">
-                                    <input type="submit" value="" id="searchsubmit">
-                                </div>
-                            </form>
-                        </div> <!-- /.top-search -->
-                    </div>	<!-- /.flat-show-search -->
+{#                      <div class="flat-show-search">#}
+{#                        <div class="show-search">#}
+{#                            <a href="#"><i class="fa fa-search"></i></a>#}
+{#                        </div>#}
+{#                        <div class="top-search">#}
+{#                            <form action="#" id="searchform-all" method="get">#}
+{#                                <div>#}
+{#                                    <input type="text" id="s" class="sss" placeholder="Search...">#}
+{#                                    <input type="submit" value="" id="searchsubmit">#}
+{#                                </div>#}
+{#                            </form>#}
+{#                        </div> <!-- /.top-search -->#}
+{#                    </div>	<!-- /.flat-show-search -->#}
                   </div>
               </div>
             </div>
@@ -145,10 +145,10 @@
                         <div class="logo clearfix">
                         <a href="index.html"> <img src="{% static 'logo/Logo.png' %}"  alt="images" data-retina="logo/Logolight@2x.png"></a>
                         </div>
-                        <p>
-                        Lorem ipsum dolor sit amet, cons etetur sadipscing elitr, sed
-                        diam nonumy eirmod tempor
-                        </p>
+{#                        <p>#}
+{#                        Lorem ipsum dolor sit amet, cons etetur sadipscing elitr, sed#}
+{#                        diam nonumy eirmod tempor#}
+{#                        </p>#}
                         <div class="topbar-socials">
                         <a href="https://www.facebook.com/New-Life-Windows-106383301005971/?view_public_for=106383301005971"><i class="fab fa-facebook-square"></i></a>
                         <a href="https://twitter.com/Newlifewindows1"><i class="fab fa-twitter"></i></a>
@@ -225,7 +225,7 @@
                 <div id="botom">
                       <div class="bottom-wrap text-center">
                         <div id="copyright">
-                          <a href="#"><span> © Newlife Windows</span></a> <span class="color-botom">2021 | All Rights Reserved</span>
+                          <a href="#"><span> © Newlife Windows</span></a> <span class="color-botom">2022 | All Rights Reserved</span>
                         </div>
                       </div>
                 </div>
