--- a/templates/service-details.html
+++ b/templates/service-details.html
@@ -1,119 +1,122 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Janelas – Windows & Doors HTML Template</title>
-
-       <!-- Theme style -->
-       <link rel="stylesheet" type="text/css" href="stylesheet/style.css" />
-       <link rel="stylesheet" type="text/css" href="stylesheet/shortcodes.css" />
-       <link rel="stylesheet" type="text/css" href="stylesheet/color.css" />
-       <!-- Animation -->
-       <link rel="stylesheet" type="text/css" href="stylesheet/animate.css" />
-   
-       <!-- Reponsive -->
-       <link rel="stylesheet" type="text/css" href="stylesheet/responsive.css" />
-   
-       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
-       <!-- Favicon and touch icons  -->
-       <link href="images/Icon/Favicon.png" rel="apple-touch-icon-precomposed">
-       <link href="images/Icon/Favicon.png" rel="apple-touch-icon-precomposed">
-       <link href="images/Icon/Favicon.png" rel="shortcut icon">
-</head>
-<body>
-    <div class="animsition boxed blog">
-        <!-- Preloader -->
-        <header id="header" class="header">
-            <div class="topbar clearfix" id="topbar">
-                <div class="container">
-                    <div class="tf-topbar">
-                    <ul class="top-content">
-                        <li class="adress">
-                            <a href="#" ><i class="icon-iconmap"></i> 2072 Pinnickinick Street, WA 98370</a >
-                        </li>
-                        <li class="email">
-                            <a href="#" ><i class="icon-iconmail"></i>info@website.com</a >
-                        </li>
-                    </ul>
-                        <div class="topbar-socials">
-                            <span class="icons">
-                                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                                <a href="#"><i class="fab fa-twitter"></i></a>
-                                <a href="#"><i class="fab fa-google-plus-g"></i></a>
-                                <a href="#"><i class="fab fa-instagram"></i></a>
-                            </span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        
-            <div class="main-top clearfix"> 
-                <div class="container container-fixel">
-                    <div class="logo bg-white">
-                      <a href="index.html">
-                        <img src="logo/LogoDark.png"   alt="images" data-retina="logo/LogoDark@2x.png" width="168" height="38" />
-                      </a>
-                    </div>
-                    <!-- logo -->
-            <div class="content-wrap clearfix">
-                        <div class="nav-wrap">
-                            <div class="btn-menu">
-                            <span></span>
-                            </div>
-                            <nav id="mainnav" class="mainnav">
-                                <ul class="menu">
-                                    <li class="menu-item-has-children">
-                                        <a href="index.html">Home</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="index.html">Home 1</a></li>
-                                            <li><a href="home2.html">Home 2</a></li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="page-window.html">Windows</a>
-                                    </li>
-                                    <li><a href="page-door.html">Doors</a>
-                                    </li>
-                                    <li class="menu-item-has-children"><a href="#">Pages</a>
-                                        <ul class="sub-menu">
-                                            <li><a href="page-about.html">About Us</a></li>
-                                            <li><a href="about-company-infomation.html">Company Infomation</a></li>
-                                            <li><a href="service.html">Services</a></li>
-                                            <li class="current-menu-item"><a href="service-details.html">Service Details</a></li>
-                                            <li><a href="page-case-study.html">Case Study</a></li>
-                                            <li><a href="study-details.html">Case Study Details</a></li>
-                                            <li><a href="page-gallery.html">Gallery</a></li>
-                                            <li><a href="page-Request-caculator.html">Cost Caculator</a></li> 
-                                            <li class="menu-item-has-children"><a href="blog-standard.html">Blog</a>
-                                                <ul class="sub-menu">
-                                                    <li><a href="blog-standard.html">Blog Standard</a></li>
-                                                    <li><a href="blog-details.html">Blog Details</a></li>
-                                                </ul>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li><a href="/page_contact">Contact</a></li>
-                                </ul>
-                            <!-- /.menu -->
-                            </nav>
-                            <!-- /#mainnav -->
-                        </div>
-                        <!-- /.nav-wrap -->
-                        <div class="flat-appointment">
-                            <a href="page-Request-caculator.html" class="themesflat-button btn-style-one">
-                            <span class="btn-title">MAKE AN ORDER</span>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- content-wrap -->
-                </div>
-              <!-- /.header-wrap -->
-            </div>
-            <!-- /.container -->
-        </header>
+{% extends 'basefile.html' %}
+{% load static %}
+{#<!DOCTYPE html>#}
+{#<html lang="en">#}
+{#<head>#}
+{#    <meta charset="UTF-8">#}
+{#    <meta http-equiv="X-UA-Compatible" content="IE=edge">#}
+{#    <meta name="viewport" content="width=device-width, initial-scale=1.0">#}
+{#    <title>Janelas – Windows & Doors HTML Template</title>#}
+{##}
+{#       <!-- Theme style -->#}
+{#       <link rel="stylesheet" type="text/css" href="stylesheet/style.css" />#}
+{#       <link rel="stylesheet" type="text/css" href="stylesheet/shortcodes.css" />#}
+{#       <link rel="stylesheet" type="text/css" href="stylesheet/color.css" />#}
+{#       <!-- Animation -->#}
+{#       <link rel="stylesheet" type="text/css" href="stylesheet/animate.css" />#}
+{#   #}
+{#       <!-- Reponsive -->#}
+{#       <link rel="stylesheet" type="text/css" href="stylesheet/responsive.css" />#}
+{#   #}
+{#       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>#}
+{#       <!-- Favicon and touch icons  -->#}
+{#       <link href="images/Icon/Favicon.png" rel="apple-touch-icon-precomposed">#}
+{#       <link href="images/Icon/Favicon.png" rel="apple-touch-icon-precomposed">#}
+{#       <link href="images/Icon/Favicon.png" rel="shortcut icon">#}
+{#</head>#}
+{#<body>#}
+{#    <div class="animsition boxed blog">#}
+{#        <!-- Preloader -->#}
+{#        <header id="header" class="header">#}
+{#            <div class="topbar clearfix" id="topbar">#}
+{#                <div class="container">#}
+{#                    <div class="tf-topbar">#}
+{#                    <ul class="top-content">#}
+{#                        <li class="adress">#}
+{#                            <a href="#" ><i class="icon-iconmap"></i> 2072 Pinnickinick Street, WA 98370</a >#}
+{#                        </li>#}
+{#                        <li class="email">#}
+{#                            <a href="#" ><i class="icon-iconmail"></i>info@website.com</a >#}
+{#                        </li>#}
+{#                    </ul>#}
+{#                        <div class="topbar-socials">#}
+{#                            <span class="icons">#}
+{#                                <a href="#"><i class="fab fa-facebook-f"></i></a>#}
+{#                                <a href="#"><i class="fab fa-twitter"></i></a>#}
+{#                                <a href="#"><i class="fab fa-google-plus-g"></i></a>#}
+{#                                <a href="#"><i class="fab fa-instagram"></i></a>#}
+{#                            </span>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        #}
+{#            <div class="main-top clearfix"> #}
+{#                <div class="container container-fixel">#}
+{#                    <div class="logo bg-white">#}
+{#                      <a href="index.html">#}
+{#                        <img src="logo/LogoDark.png"   alt="images" data-retina="logo/LogoDark@2x.png" width="168" height="38" />#}
+{#                      </a>#}
+{#                    </div>#}
+{#                    <!-- logo -->#}
+{#            <div class="content-wrap clearfix">#}
+{#                        <div class="nav-wrap">#}
+{#                            <div class="btn-menu">#}
+{#                            <span></span>#}
+{#                            </div>#}
+{#                            <nav id="mainnav" class="mainnav">#}
+{#                                <ul class="menu">#}
+{#                                    <li class="menu-item-has-children">#}
+{#                                        <a href="index.html">Home</a>#}
+{#                                        <ul class="sub-menu">#}
+{#                                            <li><a href="index.html">Home 1</a></li>#}
+{#                                            <li><a href="home2.html">Home 2</a></li>#}
+{#                                        </ul>#}
+{#                                    </li>#}
+{#                                    <li><a href="page-window.html">Windows</a>#}
+{#                                    </li>#}
+{#                                    <li><a href="page-door.html">Doors</a>#}
+{#                                    </li>#}
+{#                                    <li class="menu-item-has-children"><a href="#">Pages</a>#}
+{#                                        <ul class="sub-menu">#}
+{#                                            <li><a href="page-about.html">About Us</a></li>#}
+{#                                            <li><a href="about-company-infomation.html">Company Infomation</a></li>#}
+{#                                            <li><a href="service.html">Services</a></li>#}
+{#                                            <li class="current-menu-item"><a href="service-details.html">Service Details</a></li>#}
+{#                                            <li><a href="page-case-study.html">Case Study</a></li>#}
+{#                                            <li><a href="study-details.html">Case Study Details</a></li>#}
+{#                                            <li><a href="page-gallery.html">Gallery</a></li>#}
+{#                                            <li><a href="page-Request-caculator.html">Cost Caculator</a></li> #}
+{#                                            <li class="menu-item-has-children"><a href="blog-standard.html">Blog</a>#}
+{#                                                <ul class="sub-menu">#}
+{#                                                    <li><a href="blog-standard.html">Blog Standard</a></li>#}
+{#                                                    <li><a href="blog-details.html">Blog Details</a></li>#}
+{#                                                </ul>#}
+{#                                            </li>#}
+{#                                        </ul>#}
+{#                                    </li>#}
+{#                                    <li><a href="/page_contact">Contact</a></li>#}
+{#                                </ul>#}
+{#                            <!-- /.menu -->#}
+{#                            </nav>#}
+{#                            <!-- /#mainnav -->#}
+{#                        </div>#}
+{#                        <!-- /.nav-wrap -->#}
+{#                        <div class="flat-appointment">#}
+{#                            <a href="page-Request-caculator.html" class="themesflat-button btn-style-one">#}
+{#                            <span class="btn-title">MAKE AN ORDER</span>#}
+{#                            </a>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <!-- content-wrap -->#}
+{#                </div>#}
+{#              <!-- /.header-wrap -->#}
+{#            </div>#}
+{#            <!-- /.container -->#}
+{#        </header>#}
           <!-- /header -->
-        <div class="page-title page-title-inner padding-bottom9">
+{% block content %}
+<div class="page-title page-title-inner padding-bottom9">
             <div class="overlay-page-tile"></div>
             <div class="page-title-content">
                 <div class="container">
@@ -482,5 +485,6 @@
        <script type="text/javascript" src="javascript/main.js"></script>
        <script type="text/javascript" src="javascript/wow.min.js"></script>
        <script type="text/javascript" src="javascript/animsition.js"></script>
-</body>
-</html>
+{#</body>#}
+{% endblock %}
+{#</html>#}
