door, window, contact and company page updated

--- a/templates/about-company-infomation.html
+++ b/templates/about-company-infomation.html
@@ -23,14 +23,14 @@
                         <div class="image-hover about-image image-bg-style">
                                 <div class="imgstyle1">
                                     <div class="image">
-                                    <img src="images/about/imgabout10.jpg" alt="images">
+                                    <img src="{% static 'images/about/building2.png' %}" alt="images">
                                     </div>
                             </div>
                             </div>
                             <div class="image-hover about-image image-bg-style">
                                 <div class="imgstyle2">
                                     <div class="image">
-                                    <img src="images/about/imgabout11.jpg" alt="images">
+                                    <img src="{% static 'images/about/building.png' %}" alt="images">
                                     </div>
                                 </div>
                                 </div>
@@ -54,23 +54,29 @@
                         </p>
                         </div>
                         <ul class="iconlist-about iconlist-about-style2 wow fadeInRight animated" data-wow-delay="0ms" data-wow-duration="1500ms">
-                        <li>
-                            <span class="color-style2" >Metus interdum metus </span>
-                        </li>
                         <li >
-                            <span class="color-style2" >Nec dapibus sit </span>
+                            <span class="color-style2">Composit Doors </span>
+                        </li>
+                            <li>
+                            <span class="color-style2">PVC Doors </span>
+                        </li>
+                            <li>
+                            <span class="color-style2">Aluminium Bifold Doors </span>
                         </li>
                         <li>
-                            <span class="color-style2" >Ligula curabitur maecenas </span>
+                            <span class="color-style2">Patio Doors </span>
                         </li>
                         <li>
-                            <span class="color-style2" >Vivamus quisque gravida </span>
+                            <span class="color-style2">French Doors </span>
                         </li>
-                        <li>
-                            <span class="color-style2" >Fringilla nulla </span>
+                            <li>
+                            <span class="color-style2">Double Glaze Windows </span>
                         </li>
                         <li class="list-about-style2">
-                            <span class="color-style2">Pellentesque sodales rhoncus </span>
+                            <span class="color-style2">A-Rated Windows </span>
+                        </li>
+                            <li class="list-about-style2">
+                            <span class="color-style2">Energy Efficient </span>
                         </li>
                         </ul>
 
@@ -99,77 +105,79 @@
                                 </div>
                             </div>
                             <p class="tf-text-about">
-                                Aliquam faucibus, odio nec commodo aliquam, neque felis placerat dui, a porta ante lectus dapibus est. Aliquam
+                                We are a famous company working since 2001, based in Manchester.
+                            Carrying many happy clients for years, we are growing with good
+                            Qality Services.
                             </p>
                         </div>
-                        <div class="flat-tabs flat-tabs-type2  flat-tabs-about wow fadeInUp animated" data-wow-delay="0ms" data-wow-duration="1500ms">
-                            <ul class="menu-tab flex menu-tab-about clearfix">
-                                <li class="active">
-                                    <a href="#">Vision</a>
-                                </li>
-                                <li>
-                                    <a href="#">Mission</a>
-                                </li>
-                                <li>
-                                    <a href="#">Strategy</a>
-                                </li>
-                            </ul>
-                            <div class="content-tab">
-                                <div class="content-inner">
-                                    <div class="col-tab">
-                                        <div class="tf-tab-about">
-                                            <p class="tf-text-about">Aliquam faucibus, odio nec commodo aliquam, neque felis placerat dui, a porta ante lectus dapibus est.
-                                                    Aliquam a bibendum mi, sed condimentum</p>
-                                            <ul class="tf-iconlist-about">
-                                                <li><span>Sonsectetur adipisicing elit</span></li>
-                                                <li><span>Eiusmod tempor incididunt </span></li>
-                                                <li><span>Exercitation ullamco laboris </span></li>
-                                                <li><span>Aolore magna aliqua</span></li>
-                                            </ul>
-                                        </div>
-                                    </div>     
-                                </div>
-                                <div class="content-inner">
-                                    <div class="col-tab">
-                                        <div class="tf-tab-about">
-                                            <p class="tf-text-about">Aliquam faucibus, odio nec commodo aliquam, neque felis placerat dui, a porta ante lectus dapibus est.
-                                                    Aliquam a bibendum mi, sed condimentum</p>
-                                            <ul class="tf-iconlist-about">
-                                                <li><span>Sonsectetur adipisicing elit</span></li>
-                                                <li><span>Eiusmod tempor incididunt </span></li>
-                                                <li><span>Exercitation ullamco laboris </span></li>
-                                            </ul>
-                                        </div>
-                                    </div>     
-                                </div>
-                                <div class="content-inner">
-                                    <div class="col-tab">
-                                        <div class="tf-tab-about">
-                                            <p class="tf-text-about">Aliquam faucibus, odio nec commodo aliquam, neque felis placerat dui, a porta ante lectus dapibus est.
-                                                    Aliquam a bibendum mi, sed condimentum</p>
-                                            <ul class="tf-iconlist-about">
-                                                <li><span>Sonsectetur adipisicing elit</span></li>
-                                                <li><span>Eiusmod tempor incididunt </span></li>
-                                            </ul>
-                                        </div>
-                                    </div>     
-                                </div>
-                                <div class="content-inner">
-                                    <div class="col-tab">
-                                        <div class="tf-tab-about">
-                                            <p class="tf-text-about">Aliquam faucibus, odio nec commodo aliquam, neque felis placerat dui, a porta ante lectus dapibus est.
-                                                    Aliquam a bibendum mi, sed condimentum</p>
-                                            <ul class="tf-iconlist-about">
-                                                <li><a href="service-details.html">Sonsectetur adipisicing elit</a></li>
-                                                <li><a href="service-details.html">Eiusmod tempor incididunt </a></li>
-                                                <li><a href="service-details.html">Exercitation ullamco laboris </a></li>
-                                                <li><a href="service-details.html">Aolore magna aliqua</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>     
-                                </div>
-                            </div>
-                        </div>
+{#                        <div class="flat-tabs flat-tabs-type2  flat-tabs-about wow fadeInUp animated" data-wow-delay="0ms" data-wow-duration="1500ms">#}
+{#                            <ul class="menu-tab flex menu-tab-about clearfix">#}
+{#                                <li class="active">#}
+{#                                    <a href="#">Vision</a>#}
+{#                                </li>#}
+{#                                <li>#}
+{#                                    <a href="#">Mission</a>#}
+{#                                </li>#}
+{#                                <li>#}
+{#                                    <a href="#">Strategy</a>#}
+{#                                </li>#}
+{#                            </ul>#}
+{#                            <div class="content-tab">#}
+{#                                <div class="content-inner">#}
+{#                                    <div class="col-tab">#}
+{#                                        <div class="tf-tab-about">#}
+{#                                            <p class="tf-text-about">Aliquam faucibus, odio nec commodo aliquam, neque felis placerat dui, a porta ante lectus dapibus est.#}
+{#                                                    Aliquam a bibendum mi, sed condimentum</p>#}
+{#                                            <ul class="tf-iconlist-about">#}
+{#                                                <li><span>Sonsectetur adipisicing elit</span></li>#}
+{#                                                <li><span>Eiusmod tempor incididunt </span></li>#}
+{#                                                <li><span>Exercitation ullamco laboris </span></li>#}
+{#                                                <li><span>Aolore magna aliqua</span></li>#}
+{#                                            </ul>#}
+{#                                        </div>#}
+{#                                    </div>     #}
+{#                                </div>#}
+{#                                <div class="content-inner">#}
+{#                                    <div class="col-tab">#}
+{#                                        <div class="tf-tab-about">#}
+{#                                            <p class="tf-text-about">Aliquam faucibus, odio nec commodo aliquam, neque felis placerat dui, a porta ante lectus dapibus est.#}
+{#                                                    Aliquam a bibendum mi, sed condimentum</p>#}
+{#                                            <ul class="tf-iconlist-about">#}
+{#                                                <li><span>Sonsectetur adipisicing elit</span></li>#}
+{#                                                <li><span>Eiusmod tempor incididunt </span></li>#}
+{#                                                <li><span>Exercitation ullamco laboris </span></li>#}
+{#                                            </ul>#}
+{#                                        </div>#}
+{#                                    </div>     #}
+{#                                </div>#}
+{#                                <div class="content-inner">#}
+{#                                    <div class="col-tab">#}
+{#                                        <div class="tf-tab-about">#}
+{#                                            <p class="tf-text-about">Aliquam faucibus, odio nec commodo aliquam, neque felis placerat dui, a porta ante lectus dapibus est.#}
+{#                                                    Aliquam a bibendum mi, sed condimentum</p>#}
+{#                                            <ul class="tf-iconlist-about">#}
+{#                                                <li><span>Sonsectetur adipisicing elit</span></li>#}
+{#                                                <li><span>Eiusmod tempor incididunt </span></li>#}
+{#                                            </ul>#}
+{#                                        </div>#}
+{#                                    </div>     #}
+{#                                </div>#}
+{#                                <div class="content-inner">#}
+{#                                    <div class="col-tab">#}
+{#                                        <div class="tf-tab-about">#}
+{#                                            <p class="tf-text-about">Aliquam faucibus, odio nec commodo aliquam, neque felis placerat dui, a porta ante lectus dapibus est.#}
+{#                                                    Aliquam a bibendum mi, sed condimentum</p>#}
+{#                                            <ul class="tf-iconlist-about">#}
+{#                                                <li><a href="service-details.html">Sonsectetur adipisicing elit</a></li>#}
+{#                                                <li><a href="service-details.html">Eiusmod tempor incididunt </a></li>#}
+{#                                                <li><a href="service-details.html">Exercitation ullamco laboris </a></li>#}
+{#                                                <li><a href="service-details.html">Aolore magna aliqua</a></li>#}
+{#                                            </ul>#}
+{#                                        </div>#}
+{#                                    </div>     #}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
                     </div>
                     <div class="col-sm-6 clearfix">
                         <div class="image-box-about wow fadeInRight">
@@ -181,8 +189,7 @@
                             <ul class="box-company flex">
                                 <li><i class="icon-medal"></i></li>
                                 <li class="text-company"><h3>Best Awarded Company</h3>
-                                    <p>Lorem ipsum dolor sit amet, 
-                                        consetetur sadipscing elitr, sed
+                                    <p>Newlife Windows & Doors</p>
                                 </li>
                             </ul>
                         </div>
