--- a/templates/page-contact.html
+++ b/templates/page-contact.html
@@ -55,13 +55,13 @@
             </div>
             <div class="themesflat-spacer  clearfix" data-desktop="125" data-mobile="60" data-smobile="50" ></div>  
         </section>
-
-        <div>
-            <div class="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86077.66255184308!2d-122.40402224079803!3d47.60810999586645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906ab3f905c4b1%3A0x96bf575ff75ab1aa!2s411%20University%20St%2C%20Seattle%2C%20WA%2098101%2C%20Hoa%20K%E1%BB%B3!5e0!3m2!1svi!2s!4v1584084043716!5m2!1svi!2s" height="600" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<section >
+        <div style="width: auto; height: 1000px">
+            <div class="map" >
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1187.354312486825!2d-2.1809332312371073!3d53.473667307664904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487bb1415e653e1d%3A0x809b0f9a4caa79b7!2sOpenshaw%2C%20Manchester%20M11%202FS!5e0!3m2!1sen!2suk!4v1649374482304!5m2!1sen!2suk" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
-
+</section>
         <section class="questions questions-location">
             <div class="themesflat-spacer  clearfix" data-desktop="200" data-mobile="60" data-smobile="50" ></div>  
             <!-- container -->
